# web3-DREAM11

./: .gitmodules  CODE_OF_CONDUCT.md  LEARN.md  README.md
Backend/: .gitignore  README.md  contributing.md  hardhat.config.js  helper-hardhat-config.js  package.json
External Adapter/: .gitignore  app.js  index.js
Frontend/: .gitignore  README.md  package-lock.json  package.json
client/: .env  .eslintrc.js  .gitignore  README.md  config.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
core/: .env  .gitignore  README.md  deploy_output.txt  foundry.toml  (+1 more)
server/: .gitignore  Cargo.toml  README.md  contributing.md  hardhat.config.js  helper-hardhat-config.js
server/contracts/: Auction.sol  Game.sol  GameFactory.sol  PIC.sol
server/contracts/interfaces/: IGame.sol  IPlayer.sol
server/deploy/: 01-deploy-player-identity-card.js  02-deploy-auction.js  03-deploy-game-factory.js  03-deploy-game.js  04-deploy-game-factory.js  04-deploy-game.js
server/entity/: .gitignore  Cargo.toml
server/entity/src/: bidding.rs  game_details.rs  mod.rs  player_details.rs  prelude.rs
server/external_adapter/: app.js  index.js  package.json
server/external_adapter/constants/: abi.json
server/external_adapter/job-spec/: player-ea.toml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20231013_000001_create_space_table.rs
server/src/: main.rs
server/src/api/handlers/: error.rs  mod.rs
server/src/api/routes/: mod.rs
server/src/events/: factory.rs  mod.rs  utils.rs
server/test/unit/: Auction.test.js  Game.test.js
(+139 files in other folders)
