[package]
name = "chiji-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
alloy = { version = "0.4.2", features = ["full"] }
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3.31"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.128"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.24.1", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }
warp = "0.3.3"
dotenv = "0.15.0"
